# notastic

./: Cargo.toml  test_notes.json  web_edition.html
src/: editor_state.rs  generate_lookup.rs  json_note.rs  load_notes_from_json.rs  main.old.rs  main.rs  message.rs  note.rs  note_dev.rs  reverse_str.rs  save_notes_to_json.rs  save_to_wiki.rs
src/editor/: application.rs  editor.rs  mod.rs  notastic.rs  sandbox.rs
src/editor/view/: mod.rs  nav.rs  note_editor.rs  note_veiwer.rs
src/json/: json_note.rs  mod.rs
src/notastic/: mod.rs  notastic.rs
src/notastic/update/: mod.rs  update.rs
src/notastic/view/: mod.rs  note_editor.rs  view.rs
src/notastic/view/nav/: generate_lookup.rs  mod.rs  nav_veiw.rs
src/notastic/view/note_veiwer/: mod.rs  note_veiwer_veiw.rs
src/ui/: drag_state.rs  editor_state.rs  mod.rs
