[package]
name = "notastic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {  version = "1.0.203", features = ["derive"] }
serde_jsonrc = "0.1.0"
qol = { version = "0.1.11", git = "https://github.com/DrAlta/rust_quality_of_life.git"}
lexical-sort = "0.3.1"
iced = "0.13.1"
fs-err = "2.11.0"
rfd = "0.14.1"
nom = "7.1.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[features]
default = ["error", "trace"]
error = []
trace = []
cautiou_load_note = []
